--- a/index.html
+++ b/index.html
@@ -858,6 +858,75 @@
   </div>
 </section>
 
+  /* Floating buttons base */
+.float-btn {
+  position: fixed;
+  z-index: 60;
+  bottom: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 900;
+  box-shadow: 0 8px 24px rgba(0,0,0,0.25);
+  cursor: pointer;
+  transition: all 0.2s ease;
+}
+
+/* WhatsApp button → small green circle with just emoji */
+.float-wa {
+  left: 16px;
+  width: 56px;
+  height: 56px;
+  background: #25D366;
+  color: #fff;
+  border-radius: 50%;
+  font-size: 26px;
+  line-height: 1;
+  border: none;
+}
+
+/* Book Free Assessment → large pill button */
+.float-cta {
+  right: 16px;
+  background: #fff;
+  color: #000;
+  padding: 16px 28px;
+  font-size: 18px;
+  border-radius: 999px;
+  border: 2px solid rgba(0, 0, 0, 0.08);
+}
+
+/* Hover effects */
+.float-cta:hover {
+  background: #f5f5f5;
+  transform: scale(1.03);
+}
+.float-wa:hover {
+  transform: scale(1.1);
+}
+
+/* Safe padding for mobile so floats don't overlap content */
+#final-cta {
+  padding-bottom: 130px;
+}
+
+/* Mobile responsiveness */
+@media (max-width: 520px) {
+  .float-wa {
+    width: 50px;
+    height: 50px;
+    font-size: 24px;
+    bottom: 14px;
+  }
+
+  .float-cta {
+    padding: 14px 20px;
+    font-size: 16px;
+    max-width: 72%;
+    text-align: center;
+  }
+}
+
 
 
 <script>
