--- a/index.html
+++ b/index.html
@@ -765,6 +765,151 @@
 
 </section>
 
+
+
+
+
+<!-- ================== PROGRESS (dark) + TRIPLE GUARANTEE ================== -->
+<style>
+  /* ===== Progress (dark) ===== */
+  .progress-sec{
+    background:#0a0a0a;color:#fff;padding:56px 0
+  }
+  .progress-wrap{max-width:1100px;margin:0 auto;padding:0 14px;
+    display:grid;grid-template-columns:1.05fr .95fr;gap:28px;align-items:center}
+  .progress-title{font-weight:900;line-height:1.1;font-size:clamp(28px,5.4vw,54px);margin-bottom:14px}
+  .progress-copy{color:#d1d5db;font-size:clamp(15px,2.6vw,18px);line-height:1.85}
+  .progress-copy b{color:#fff}
+  .metric-card{
+    background:#0e1116;border:1px solid #1f2937;border-radius:18px;
+    box-shadow:0 24px 60px rgba(0,0,0,.45);overflow:hidden
+  }
+  .metric-row{display:grid;grid-template-columns:1fr;gap:0;border-bottom:1px solid #1f2937}
+  .metric{display:flex;gap:16px;align-items:center;padding:18px 20px}
+  .metric:last-child{border-top:1px solid #1f2937}
+  .metric-ic{
+    width:42px;height:42px;border-radius:12px;display:grid;place-items:center;
+    background:#0b1220;border:1px solid #1f2937;font-size:20px
+  }
+  .metric h4{margin:0;font-size:22px;font-weight:900}
+  .metric p{margin:4px 0 0;color:#aab1bb}
+
+  @media (max-width:860px){
+    .progress-wrap{grid-template-columns:1fr;gap:18px}
+  }
+
+  /* ===== Triple Guarantee ===== */
+  .guarantee{background:#fff;padding:42px 0}
+  .g-wrap{max-width:1000px;margin:0 auto;padding:0 14px}
+  .g-title{font-size:clamp(24px,4.6vw,36px);font-weight:900;text-align:center;margin-bottom:16px}
+  .g-table{
+    background:#fff;border:1px solid #e5e7eb;border-radius:16px;overflow:hidden;
+    box-shadow:0 14px 34px rgba(0,0,0,.08)
+  }
+  .g-row{display:grid;grid-template-columns:220px 1fr;border-top:1px solid #eef2f7}
+  .g-row:first-child{border-top:none}
+  .g-left{padding:18px 16px;display:flex;gap:10px;align-items:flex-start;font-weight:800}
+  .g-left .g-ic{font-size:20px}
+  .g-right{padding:18px 16px;color:#111827;line-height:1.75}
+  .g-right b{font-weight:900}
+  @media (max-width:640px){
+    .g-row{grid-template-columns:1fr}
+    .g-left{border-bottom:1px solid #eef2f7}
+  }
+</style>
+
+<!-- ===== Progress (dark) ===== -->
+<section class="progress-sec">
+  <div class="progress-wrap">
+    <!-- Left copy -->
+    <div>
+      <h2 class="progress-title">Your Child’s Progress,<br>Tracked Every Step</h2>
+      <p class="progress-copy">
+        Before joining iiTuitions, Aarav was scoring just <b>42%</b> in Physics and
+        struggled with problem-solving.<br><br>
+        After 8 weeks of 1-on-1 mentorship, he now confidently solves <b>80%+</b>
+        and is among the top in his batch.<br><br>
+        Every test, session, and topic is tracked. Parents get weekly updates.
+      </p>
+    </div>
+
+    <!-- Right metric card -->
+    <aside class="metric-card" aria-label="Progress metrics">
+      <div class="metric-row">
+        <div class="metric">
+          <div class="metric-ic">📈</div>
+          <div>
+            <h4>Physics Accuracy</h4>
+            <p>+38 pts in 6 weeks</p>
+          </div>
+        </div>
+        <div class="metric">
+          <div class="metric-ic">⚡</div>
+          <div>
+            <h4>Speed (Q/min)</h4>
+            <p>+41% faster</p>
+          </div>
+        </div>
+        <div class="metric">
+          <div class="metric-ic">🎯</div>
+          <div>
+            <h4>IIT Mock Percentile</h4>
+            <p>+22 points</p>
+          </div>
+        </div>
+      </div>
+    </aside>
+  </div>
+</section>
+
+<!-- ===== Triple Guarantee ===== -->
+<section class="guarantee" id="guarantee">
+  <div class="g-wrap">
+    <h2 class="g-title">Our Triple Guarantee</h2>
+
+    <div class="g-table" role="table" aria-label="iiTuitions Guarantees">
+      <!-- Row 1 -->
+      <div class="g-row" role="row">
+        <div class="g-left" role="cell"><span class="g-ic">💰</span>30-Day Money-Back</div>
+        <div class="g-right" role="cell">
+          If you’re not satisfied after joining, get a <b>full refund within 30 days</b>
+          — no questions asked.
+        </div>
+      </div>
+      <!-- Row 2 -->
+      <div class="g-row" role="row">
+        <div class="g-left" role="cell"><span class="g-ic">📊</span>Measurable Progress</div>
+        <div class="g-right" role="cell">
+          If promised milestones aren’t met, <b>we refund your fees</b>.
+          Plans and outcomes are reviewed every 2 weeks.
+        </div>
+      </div>
+      <!-- Row 3 -->
+      <div class="g-row" role="row">
+        <div class="g-left" role="cell"><span class="g-ic">🎥</span>Commitment Fulfillment</div>
+        <div class="g-right" role="cell">
+          Every session is <b>recorded</b>, reviewed, and shared in weekly parent updates.
+          If we miss a promise, <b>you don’t pay for it</b>.
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- ================== /PROGRESS + TRIPLE GUARANTEE ================== -->
+
+
+
+
+
+
+
+
+
+
+
+
+  
+
 <!-- Floating buttons (place BEFORE the script) -->
 <a class="float-btn float-wa"
    href="https://wa.me/919010031000?text=Hi%20IITuitions%2C%20please%20book%20my%20free%20assessment"
