--- a/index.html
+++ b/index.html
@@ -900,6 +900,253 @@
 
 
 
+   <!-- ================== FINAL COUNTDOWN + CTA + FLOATING BUTTONS ================== -->
+<style>
+  /* Dark final section */
+  .final-dark{
+    background:#0a0a0a;
+    color:#fff;
+  }
+  .final-wrap{
+    max-width:980px;
+    margin:0 auto;
+    padding:0 14px;
+  }
+
+  /* Countdown timer bar */
+  #deadline{
+    padding:18px 0;
+    border-top:1px solid rgba(255,255,255,.08);
+    border-bottom:1px solid rgba(255,255,255,.08);
+    text-align:center;
+  }
+  .dead-top{
+    display:flex;
+    justify-content:center;
+    gap:8px;
+    align-items:center;
+    margin-bottom:6px;
+  }
+  .dead-top b{
+    font-weight:800;
+  }
+  .dead-timer{
+    font-variant-numeric:tabular-nums;
+    letter-spacing:2px;
+    font-weight:900;
+    font-size:42px;
+    text-align:center;
+    line-height:1;
+  }
+  .dead-sub{
+    opacity:.9;
+    text-align:center;
+    margin-top:6px;
+  }
+
+  /* Final CTA */
+  #final-cta{
+    padding:42px 0 60px;
+    text-align:center;
+  }
+  #final-cta h2{
+    font-size:clamp(26px,6vw,44px);
+    line-height:1.15;
+    font-weight:900;
+    margin-bottom:10px;
+  }
+  #final-cta p.lead{
+    opacity:.92;
+    max-width:780px;
+    margin:0 auto 16px;
+    font-size:clamp(15px,3.2vw,18px);
+  }
+
+  /* Main CTA button */
+  .cta-btn{
+    display:inline-flex;
+    gap:10px;
+    align-items:center;
+    justify-content:center;
+    padding:16px 28px;
+    border-radius:999px;
+    background:#000;
+    color:#fff;
+    font-weight:900;
+    font-size:18px;
+    border:2px solid rgba(255,255,255,0.15);
+    box-shadow:0 14px 34px rgba(0,0,0,.35);
+    transition:all .2s ease;
+  }
+  .cta-btn:hover{
+    background:#111;
+    transform:scale(1.04);
+  }
+
+  .cta-small{
+    opacity:.9;
+    margin-top:8px;
+  }
+  .about{
+    opacity:.85;
+    max-width:760px;
+    margin:18px auto 0;
+    line-height:1.7;
+    text-align:center;
+  }
+
+  /* Floating buttons */
+  .float-btn{
+    position:fixed;
+    z-index:60;
+    bottom:16px;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    font-weight:900;
+    box-shadow:0 8px 24px rgba(0,0,0,0.25);
+    cursor:pointer;
+    transition:all 0.2s ease;
+  }
+
+  /* WhatsApp button (small circle) */
+  .float-wa{
+    left:16px;
+    width:56px;
+    height:56px;
+    background:#25D366;
+    color:#fff;
+    border-radius:50%;
+    font-size:26px;
+    line-height:1;
+    border:none;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+  }
+
+  /* Book Free Assessment button */
+  .float-cta{
+    right:16px;
+    background:#000;
+    color:#fff;
+    padding:16px 28px;
+    font-size:18px;
+    border-radius:999px;
+    border:2px solid rgba(0,0,0,0.08);
+  }
+  .float-cta:hover{
+    background:#111;
+    transform:scale(1.05);
+  }
+  .float-wa:hover{
+    transform:scale(1.1);
+  }
+
+  /* Safe padding for mobile so floats don't overlap content */
+  #final-cta{
+    padding-bottom:130px;
+  }
+
+  /* Mobile responsiveness */
+  @media (max-width:520px){
+    .float-wa{
+      width:50px;
+      height:50px;
+      font-size:24px;
+      bottom:14px;
+    }
+    .float-cta{
+      padding:14px 20px;
+      font-size:16px;
+      max-width:72%;
+      text-align:center;
+    }
+  }
+</style>
+
+<!-- Countdown strip -->
+<section id="deadline" class="final-dark">
+  <div class="final-wrap">
+    <div class="dead-top">
+      <span>⚡</span>
+      <span>Limited seats left for <b id="batchLabel">September</b> batch</span>
+    </div>
+    <div class="dead-timer" id="timerBig">00:00:00</div>
+    <div class="dead-sub" id="deadlineSub">
+      Applications close in <b id="daysLeft">2</b> days
+    </div>
+  </div>
+</section>
+
+<!-- Final hero + CTA -->
+<section id="final-cta" class="final-dark">
+  <div class="final-wrap">
+    <h2>Your Child’s IIT Dream Starts Now</h2>
+    <p class="lead">Join the exclusive cohort of 50 students who get personal mentorship from IIT/NIT toppers.</p>
+
+    <div class="cta-wrap">
+      <a class="cta-btn"
+         href="https://wa.me/919010031000?text=Hi%20IITuitions%2C%20please%20book%20my%20free%20assessment"
+         target="_blank" rel="noopener">
+        📋 Book Free Assessment
+      </a>
+    </div>
+
+    <div class="cta-small">Offer ends in <b id="timerSmall">00:00:00</b></div>
+    <p class="about">
+      Helping students crack IIT JEE examinations and secure admissions into premier IITs and NITs since 2017.
+    </p>
+  </div>
+</section>
+
+<!-- Floating buttons -->
+<a class="float-btn float-wa"
+   href="https://wa.me/919010031000?text=Hi%20IITuitions%2C%20please%20book%20my%20free%20assessment"
+   target="_blank" rel="noopener" aria-label="Chat on WhatsApp">
+  💬
+</a>
+
+<a class="float-btn float-cta"
+   href="https://wa.me/919010031000?text=Hi%20IITuitions%2C%20please%20book%20my%20free%20assessment"
+   target="_blank" rel="noopener" aria-label="Book Free Assessment">
+  📋 Book Free Assessment
+</a>
+
+<script>
+  // ===== Countdown (shared for both timers) =====
+  const deadlineISO = new Date(Date.now() + 2*24*60*60*1000).toISOString();
+  const DLINE = new Date(deadlineISO);
+  const bigEl = document.getElementById('timerBig');
+  const smallEl = document.getElementById('timerSmall');
+  const daysLeftEl = document.getElementById('daysLeft');
+
+  function pad(n){ return String(n).padStart(2,'0'); }
+  function tick(){
+    const now = new Date();
+    let diff = Math.max(0, DLINE - now);
+    const d = Math.floor(diff / (24*60*60*1000)); diff -= d*24*60*60*1000;
+    const h = Math.floor(diff / (60*60*1000)); diff -= h*60*60*1000;
+    const m = Math.floor(diff / (60*1000)); diff -= m*60*1000;
+    const s = Math.floor(diff / 1000);
+    const hh = pad(d*24 + h);
+    const display = `${hh}:${pad(m)}:${pad(s)}`;
+    bigEl.textContent = display;
+    smallEl.textContent = display;
+    daysLeftEl.textContent = Math.max(0, d);
+
+    if(DLINE - now <= 0){
+      clearInterval(tmr);
+      bigEl.textContent = '00:00:00';
+      smallEl.textContent = '00:00:00';
+    }
+  }
+  const tmr = setInterval(tick, 1000); tick();
+  const month = DLINE.toLocaleString(undefined, { month:'long' });
+  document.getElementById('batchLabel').textContent = month;
+</script>
+<!-- ================== /FINAL COUNTDOWN + CTA + FLOATING BUTTONS ================== -->
+
 
 
 
@@ -910,161 +1157,6 @@
 
   
 
-<!-- Floating buttons (place BEFORE the script) -->
-<a class="float-btn float-wa"
-   href="https://wa.me/919010031000?text=Hi%20IITuitions%2C%20please%20book%20my%20free%20assessment"
-   target="_blank" rel="noopener" aria-label="Chat on WhatsApp">💬</a>
-
-<a class="float-btn float-cta"
-   href="https://wa.me/919010031000?text=Hi%20IITuitions%2C%20please%20book%20my%20free%20assessment"
-   target="_blank" rel="noopener" aria-label="Book Free Assessment">📋 Book Free Assessment</a>
-
-<!-- Floating button styles (now inside a proper <style>) -->
-<style>
-  /* Floating buttons — fixed, mobile-safe */
-  .float-btn{
-    position:fixed;z-index:60;bottom:16px;
-    display:flex;align-items:center;justify-content:center;
-    font-weight:900;box-shadow:0 8px 24px rgba(0,0,0,.25);
-    cursor:pointer;transition:.2s;border-radius:999px;
-  }
-  /* WhatsApp: small green circle with emoji only */
-  .float-wa{
-    left:16px;width:56px;height:56px;background:#25D366;color:#fff;
-    border:none;border-radius:50%;font-size:26px;line-height:1;
-  }
-  /* Book Free Assessment: compact pill */
-  .float-cta{
-    right:16px;background:#fff;color:#000;padding:14px 20px;
-    font-size:16px;border:2px solid rgba(0,0,0,.08);
-  }
-  .float-cta:hover{background:#f5f5f5;transform:scale(1.03)}
-  .float-wa:hover{transform:scale(1.08)}
-  /* Keep content clear of floats at bottom of page */
-  #final-cta{padding-bottom:130px}
-  @media (max-width:520px){
-    .float-wa{width:50px;height:50px;font-size:24px;bottom:14px;left:14px}
-    .float-cta{padding:12px 16px;font-size:14px;right:14px;max-width:72%}
-  }
-</style>
-
-<!-- Countdown script (HTML-free!) -->
-<script>
-  // ===== Countdown (shared for both timers) =====
-  const deadlineISO = new Date(Date.now() + 2*24*60*60*1000).toISOString();
-
-  const DLINE = new Date(deadlineISO);
-  const bigEl = document.getElementById('timerBig');
-  const smallEl = document.getElementById('timerSmall');
-  const daysLeftEl = document.getElementById('daysLeft');
-
-  function pad(n){ return String(n).padStart(2,'0'); }
-  function tick(){
-    const now = new Date();
-    let diff = Math.max(0, DLINE - now);
-    const d = Math.floor(diff / (24*60*60*1000)); diff -= d*24*60*60*1000;
-    const h = Math.floor(diff / (60*60*1000));    diff -= h*60*60*1000;
-    const m = Math.floor(diff / (60*1000));       diff -= m*60*1000;
-    const s = Math.floor(diff / 1000);
-
-    const hh = pad(d*24 + h);
-    const display = `${hh}:${pad(m)}:${pad(s)}`;
-    bigEl.textContent = display;
-    smallEl.textContent = display;
-    daysLeftEl.textContent = Math.max(0, d);
-
-    if (DLINE - now <= 0){
-      clearInterval(tmr);
-      bigEl.textContent = '00:00:00';
-      smallEl.textContent = '00:00:00';
-    }
-  }
-  const tmr = setInterval(tick, 1000); tick();
-
-  // Set month label (e.g., "September")
-  const month = DLINE.toLocaleString(undefined, { month:'long' });
-  document.getElementById('batchLabel').textContent = month;
-</script>
-
-
-
-</section>
-
-<!-- Floating buttons (place BEFORE the script) -->
-<a class="float-btn float-wa"
-   href="https://wa.me/919010031000?text=Hi%20IITuitions%2C%20please%20book%20my%20free%20assessment"
-   target="_blank" rel="noopener" aria-label="Chat on WhatsApp">💬</a>
-
-<a class="float-btn float-cta"
-   href="https://wa.me/919010031000?text=Hi%20IITuitions%2C%20please%20book%20my%20free%20assessment"
-   target="_blank" rel="noopener" aria-label="Book Free Assessment">📋 Book Free Assessment</a>
-
-<!-- Floating button styles (now inside a proper <style>) -->
-<style>
-  /* Floating buttons — fixed, mobile-safe */
-  .float-btn{
-    position:fixed;z-index:60;bottom:16px;
-    display:flex;align-items:center;justify-content:center;
-    font-weight:900;box-shadow:0 8px 24px rgba(0,0,0,.25);
-    cursor:pointer;transition:.2s;border-radius:999px;
-  }
-  /* WhatsApp: small green circle with emoji only */
-  .float-wa{
-    left:16px;width:56px;height:56px;background:#25D366;color:#fff;
-    border:none;border-radius:50%;font-size:26px;line-height:1;
-  }
-  /* Book Free Assessment: compact pill */
-  .float-cta{
-    right:16px;background:#fff;color:#000;padding:14px 20px;
-    font-size:16px;border:2px solid rgba(0,0,0,.08);
-  }
-  .float-cta:hover{background:#f5f5f5;transform:scale(1.03)}
-  .float-wa:hover{transform:scale(1.08)}
-  /* Keep content clear of floats at bottom of page */
-  #final-cta{padding-bottom:130px}
-  @media (max-width:520px){
-    .float-wa{width:50px;height:50px;font-size:24px;bottom:14px;left:14px}
-    .float-cta{padding:12px 16px;font-size:14px;right:14px;max-width:72%}
-  }
-</style>
-
-<!-- Countdown script (HTML-free!) -->
-<script>
-  // ===== Countdown (shared for both timers) =====
-  const deadlineISO = new Date(Date.now() + 2*24*60*60*1000).toISOString();
-
-  const DLINE = new Date(deadlineISO);
-  const bigEl = document.getElementById('timerBig');
-  const smallEl = document.getElementById('timerSmall');
-  const daysLeftEl = document.getElementById('daysLeft');
-
-  function pad(n){ return String(n).padStart(2,'0'); }
-  function tick(){
-    const now = new Date();
-    let diff = Math.max(0, DLINE - now);
-    const d = Math.floor(diff / (24*60*60*1000)); diff -= d*24*60*60*1000;
-    const h = Math.floor(diff / (60*60*1000));    diff -= h*60*60*1000;
-    const m = Math.floor(diff / (60*1000));       diff -= m*60*1000;
-    const s = Math.floor(diff / 1000);
-
-    const hh = pad(d*24 + h);
-    const display = `${hh}:${pad(m)}:${pad(s)}`;
-    bigEl.textContent = display;
-    smallEl.textContent = display;
-    daysLeftEl.textContent = Math.max(0, d);
-
-    if (DLINE - now <= 0){
-      clearInterval(tmr);
-      bigEl.textContent = '00:00:00';
-      smallEl.textContent = '00:00:00';
-    }
-  }
-  const tmr = setInterval(tick, 1000); tick();
-
-  // Set month label (e.g., "September")
-  const month = DLINE.toLocaleString(undefined, { month:'long' });
-  document.getElementById('batchLabel').textContent = month;
-</script>
 
 
 
