--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
         <div class="pill">✅ Hundreds in IITs/NITs</div>
         <div class="pill">🏆 10+ Years Excellence</div>
         <div class="pill">🎯 AIR under 100</div>
-        <div class="pill">⚡ Max 50 students/year</div>
+        <div class="pill">⚡ Max 50 students because best faculty are always limited</div>
       </div>
       <h1>Transform Your Child's IIT Dreams into Reality</h1>
       <p>Personal mentorship by IIT/NIT alumni. Precision assessments and recorded sessions that convert effort into ranks.</p>
@@ -963,6 +963,76 @@
 <!-- ================== /PROGRESS + TRIPLE GUARANTEE ================== -->
 
 
+<!-- ===== Urgency Banner + Quote Card (after Triple Guarantee) ===== -->
+<style>
+  .urg-wrap{max-width:1100px;margin:0 auto;padding:0 12px}
+  .urg-banner{
+    margin:28px auto 14px;
+    border-radius:28px;
+    background:radial-gradient(1200px 600px at 20% -10%, #1b1b1b 0%, #0b0b0b 55%, #080808 100%);
+    color:#fff;
+    padding:28px 20px 26px;
+    box-shadow:0 30px 80px rgba(0,0,0,.45), inset 0 1px 0 rgba(255,255,255,.06);
+  }
+  .urg-pill{
+    display:inline-flex;align-items:center;justify-content:center;
+    padding:8px 16px;border-radius:999px;
+    background:#b91c1c;color:#fff;font-weight:900;font-size:12px;letter-spacing:.4px;
+    border:1px solid rgba(255,255,255,.12);box-shadow:0 8px 24px rgba(185,28,28,.35)
+  }
+  .urg-head{font-weight:900;line-height:1.1;margin:14px 0 10px;
+    font-size:clamp(26px,5.6vw,48px)}
+  .urg-copy{opacity:.92;font-size:clamp(15px,3.2vw,18px);max-width:860px}
+  .urg-cta{
+    display:inline-flex;align-items:center;gap:12px;margin-top:20px;
+    padding:16px 24px;border-radius:999px;
+    color:#fff;background:linear-gradient(135deg,#1f2937,#0b0b0b);
+    border:1px solid rgba(255,255,255,.12);
+    box-shadow:0 18px 50px rgba(0,0,0,.45), inset 0 1px 0 rgba(255,255,255,.08);
+    font-weight:900
+  }
+  .urg-cta:hover{transform:translateY(-1px)}
+  .urg-trust{opacity:.7;margin-top:10px}
+
+  /* Quote card (Image-2 content) */
+  .urg-quote{
+    margin:10px auto 0;
+    background:#fff;border:1px solid #e5e7eb;border-radius:16px;color:#0b1220;
+    padding:16px 18px;box-shadow:0 12px 30px rgba(0,0,0,.06);max-width:800px
+  }
+  .urg-quote b{font-weight:900}
+  .urg-quote .line{margin:6px 0}
+</style>
+
+<section aria-label="Urgency Banner">
+  <div class="urg-wrap">
+    <!-- Image-1 style banner -->
+    <div class="urg-banner">
+      <div class="urg-pill">LIMITED SEATS FOR SEPTEMBER COHORT</div>
+      <h2 class="urg-head">Don’t Let Your Child’s IIT Dream Slip Away 🚀</h2>
+      <p class="urg-copy">
+        Only 50 students this year get personal mentorship from IIT/NIT alumni.
+        Seats fill up fast—secure your child’s spot today.
+      </p>
+
+      <a class="urg-cta"
+         href="https://wa.me/919010031000?text=Hi%20IITuitions%2C%20please%20book%20my%20free%20assessment"
+         target="_blank" rel="noopener">
+        ➜ Secure Free 1-on-1 Assessment
+      </a>
+
+      <div class="urg-trust">Trusted by 500+ IIT Aspirants · 93% Success Rate</div>
+    </div>
+
+    <!-- Image-2 content (quote card) -->
+    <div class="urg-quote">
+      <div class="line"><b>“Give Your Child the Edge They Deserve ✨”</b></div>
+      <div class="line"><i>Exclusive 1-on-1 mentorship from IIT/NIT alumni.</i></div>
+      <div class="line">We take only <b>50 students per year</b> to ensure absolute focus.</div>
+    </div>
+  </div>
+</section>
+<!-- ===== /Urgency Banner + Quote Card ===== -->
 
 
    <!-- ================== FINAL COUNTDOWN + CTA + FLOATING BUTTONS ================== -->
