--- a/index.html
+++ b/index.html
@@ -294,9 +294,9 @@
   <section class="hero">
     <div class="wrap">
       <div class="stats">
-        <div class="pill">✅ Hundreds in IITs/NITs</div>
+        <div class="pill">✅ Hundreds of IITs/NITs</div>
         <div class="pill">🏆 10+ Years Excellence</div>
-        <div class="pill">🎯 AIR under 100</div>
+        <div class="pill">🎯 AIR under 100 per% 1-1 only</div>
         <div class="pill">⚡ Max 50 students because best faculty are always limited</div>
       </div>
       <h1>Transform Your Child's IIT Dreams into Reality</h1>
