--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
       <div class="trustcard"><div class="big">93%</div>Success rate</div>
       <div class="trustcard"><div class="big">30+</div>AIR &lt; 500</div>
       <div class="trustcard"><div class="big">100%</div>IIT/NIT Alumni</div>
-      <div class="trustcard"><div class="big">10 yrs</div>Excellence</div>
+      <div class="trustcard"><div class="big">10+ yrs</div>Excellence</div>
     </div>
   </section>
 
