--- a/index.html
+++ b/index.html
@@ -440,10 +440,40 @@
         <!-- Step 4 -->
         <article class="step">
           <div class="num">4</div>
-          <div>
-            <h3>Reviews &amp; Results</h3>
-            <div class="sub">Track progress every day</div>
-          </div>
+          <!-- Step 4 details (add this RIGHT AFTER the Step 4 header article) -->
+<div class="how-panel" id="reviews-results-details" aria-labelledby="reviews-results-step">
+  <h5>We track and improve performance in real time</h5>
+
+  <p style="margin:6px 0 10px">
+    <i>“We’ve seen it happen everywhere — students spend <b>months</b> attending classes, giving tests, and working hard… only to realise <b>too late</b> that they were going in the <b>wrong direction</b>.</i><br>
+    <i>At iiTuitions, we don’t let that happen.”</i>
+  </p>
+
+  <ul class="bullets">
+    <li>🍀 <b>Micro Tests After Every Topic</b> → We immediately check if your child has <b>grasped the concept</b>.</li>
+
+    <li>📚 <b>Macro Tests After 2–3 Topics</b> → To measure <b>concept linking and retention</b>.</li>
+
+    <li>🧠 <b>Revision Tests Regularly</b> → Ensuring your child <b>retains, recalls, and applies</b>.</li>
+
+    <li>📊 <b>Weekly Parent Discussions</b> → We share:
+      <ul class="subb">
+        <li>Test performance insights</li>
+        <li>Problem-solving patterns</li>
+        <li>Actionable next steps</li>
+      </ul>
+    </li>
+
+    <li>⚡ <b>Instant Strategy Corrections</b> → If something isn’t working, <b>we fix it then and there</b> — <b>not after six months, not after failure</b>.</li>
+
+    <li>🤝 <b>Parent Support Is Key</b> → Our best results came when <b>parents worked closely with us</b>, and we worked <b>together as one team</b>.</li>
+  </ul>
+
+  <p style="margin-top:10px;font-style:italic">
+    “Tracking isn’t just about numbers — it’s about making <b>every session, every test, and every minute count</b>.” ✅
+  </p>
+</div>
+
         </article>
       </div>
     </div>
