--- a/index.html
+++ b/index.html
@@ -438,24 +438,32 @@
         </div>
 
         <!-- Step 4 -->
-        <article class="step">
-          <div class="num">4</div>
-          <!-- Step 4 details (add this RIGHT AFTER the Step 4 header article) -->
-<div class="how-panel" id="reviews-results-details" aria-labelledby="reviews-results-step">
-  <h5>We track and improve performance in real time</h5>
+        <!-- Step 4: header (separate card) -->
+<article class="step" id="reviews-step">
+  <div class="num">4</div>
+  <div>
+    <h3>Reviews &amp; Results</h3>
+    <div class="sub">Track progress every day</div>
+  </div>
+</article>
 
-  <p style="margin:6px 0 10px">
-    <i>“We’ve seen it happen everywhere — students spend <b>months</b> attending classes, giving tests, and working hard… only to realise <b>too late</b> that they were going in the <b>wrong direction</b>.</i><br>
-    <i>At iiTuitions, we don’t let that happen.”</i>
+<!-- Step 4: details panel (separate clean block) -->
+<div class="how-panel" id="reviews-details" aria-labelledby="reviews-step">
+  <h5>We Track and Improve Performance in Real Time</h5>
+
+  <p style="margin:8px 0">
+    <i>“We’ve seen it happen everywhere — students spend <b>months</b> attending classes, giving tests,
+    and working hard… only to realise <b>too late</b> that they were going in the <b>wrong direction</b>.</i>”
+  </p>
+  <p style="margin:8px 0">
+    At <b>iiTuitions</b>, we don’t let that happen.
   </p>
 
+  <p style="margin:12px 0 6px"><b>Here’s how we track and improve performance in real time:</b></p>
   <ul class="bullets">
     <li>🍀 <b>Micro Tests After Every Topic</b> → We immediately check if your child has <b>grasped the concept</b>.</li>
-
     <li>📚 <b>Macro Tests After 2–3 Topics</b> → To measure <b>concept linking and retention</b>.</li>
-
-    <li>🧠 <b>Revision Tests Regularly</b> → Ensuring your child <b>retains, recalls, and applies</b>.</li>
-
+    <li>🗂️ <b>Revision Tests Regularly</b> → Ensuring your child <b>retains, recalls, and applies</b>.</li>
     <li>📊 <b>Weekly Parent Discussions</b> → We share:
       <ul class="subb">
         <li>Test performance insights</li>
@@ -463,18 +471,15 @@
         <li>Actionable next steps</li>
       </ul>
     </li>
-
-    <li>⚡ <b>Instant Strategy Corrections</b> → If something isn’t working, <b>we fix it then and there</b> — <b>not after six months, not after failure</b>.</li>
-
+    <li>⚡ <b>Instant Strategy Corrections</b> → If something isn’t working, we <b>fix it then and there</b> — not after six months, not after failure.</li>
     <li>🤝 <b>Parent Support Is Key</b> → Our best results came when <b>parents worked closely with us</b>, and we worked <b>together as one team</b>.</li>
   </ul>
 
-  <p style="margin-top:10px;font-style:italic">
-    “Tracking isn’t just about numbers — it’s about making <b>every session, every test, and every minute count</b>.” ✅
+  <p style="margin-top:12px">
+    <i>“Tracking isn’t just about numbers — it’s about making <b>every session</b>, <b>every test</b>, and <b>every minute</b> count.”</i> ✅
   </p>
 </div>
 
-        </article>
       </div>
     </div>
   </section>
