--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
           <div class="accordion" id="examAcc">
   <div class="acc-h" id="examToggle" role="button" aria-expanded="false">
     <span class="qmark">?</span>
-    <span>❓ “Is this an exam?”</span>
+    <span> “Is this an exam?”</span>
     <span class="toggle">⌄</span>
   </div>
   <div class="acc-b" id="examBody" aria-hidden="true">
