--- a/index.html
+++ b/index.html
@@ -173,10 +173,7 @@
   .card{ padding:18px; }
   .why-grid .card + .card{ margin-top:12px; }
 }
-/* Exam accordion styling */
-.qmark{ color:#ef4444; font-weight:900; margin-right:10px; font-size:22px; line-height:1; }
-.acc-h{ cursor:pointer; }
-.accordion.open .acc-b{ display:block; }
+
 
 
     /* Comparison */
@@ -367,24 +364,11 @@
           </div>
 
           <div class="accordion" id="examAcc">
-  <div class="acc-h" id="examToggle" role="button" aria-expanded="false">
-    <span class="qmark">?</span>
-    <span> “Is this an exam?”</span>
-    <span class="toggle">⌄</span>
-  </div>
-  <div class="acc-b" id="examBody" aria-hidden="true">
-    <p>
-      Nope 🙂 — this isn’t a memory-based test. Our IIT mentors <b>talk 1-on-1</b> with your child,
-      <b>teach a sample concept</b>, and ask a few <b>conceptual &amp; numerical questions</b> to understand
-      their <b>learning style</b>.
-    </p>
-    <p style="margin-top:10px;font-style:italic">
-      No marks. No stress. Pure understanding.
-    </p>
-    <p style="margin-top:6px">✅</p>
+  <div class="acc-h"><span>❓ “Is this an exam?”</span><span class="toggle">⌄</span></div>
+  <div class="acc-b">
+    <p>Nope 🙂 — this isn’t a memory-based test. Our IIT mentors <b>talk 1-on-1</b> with your child, <b>teach a sample concept</b>, and ask a few <b>conceptual &amp; numerical questions</b> to understand real comprehension and application. It’s <b>stress-free</b> and focused on <b>diagnosis, not scores</b>.</p>
   </div>
 </div>
-
 
         <!-- Step 2 header -->
         <article class="step" id="roadmap-step">
